# SERTime

./: .gitignore  .pre-commit-config.yaml  README.md
.github/workflows/: build-desktop.yml
docs/: TODO.md  plan.md
python/: README.md  eval_metrics.py  pyproject.toml  pyrightconfig.json
python/utils/: eval_metrics.py  torch_converter.py
scripts/: check_codestyle.sh  check_safety.sh  pull_dns3_data.sh  pull_vctk_data.sh  run_model_conversion.sh  run_py_metrics.sh  safety.sh  test.sh
