[project]
name = "SERTime"
version = "0.1.0"
description = "Evaluation and Model changes"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ai-edge-torch>=0.2.1",
    "bandit>=1.8.6",
    "onnx>=1.19.1",
    "onnxruntime>=1.20.1",
    "pesq>=0.0.4",
    "pystoi>=0.4.1",
    "ruff>=0.14.0",
    "safety>=3.6.2",
    "tf-nightly>=2.21.0.dev20251029",
    "torch>=2.5.1",
    "torchmetrics>=1.8.2",
]
